[ZEPPELIN-4758] Additional cleanup for Java 8 support
- Remove obsolete Java options
- add the check for minimum Java version (Java 8u151) to `zeppelin.sh` & `interpreter.sh`